# MjGrok

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
scripts/: test_runner.py  test_scenario.py
src/mjgrok/: __init__.py  __main__.py
src/mjgrok/gui/: __init__.py  app.py  param_panel.py  playback_panel.py  plot_panel.py  saveload_panel.py
src/mjgrok/scenarios/: __init__.py  actuated_arm.py  base.py  bouncing_ball.py  double_pendulum.py  parallel_jaw_grasp.py  penetrating_sphere.py  sliding_box.py
src/mjgrok/simulation/: __init__.py  runner.py  trajectory.py
src/mjgrok/viewer/: __init__.py  embedded_renderer.py  playback.py  worker.py
tests/: test_scenarios.py
